--- a/titlepage.tex
+++ b/titlepage.tex
@@ -15,8 +15,8 @@
 \begin{textblock}{8.5}(.25,8)
     \centering
     
-    A dissertation submitted in partial fulfilment of the requirements for the\\[.9ex]
-    Doctor of Philosophy\\[.9ex]
+    A thesis submitted in partial fulfilment of the requirements for the\\[.9ex]
+    Master of Science\\[.9ex]
     Major in \yourmajor\\ [.9ex]
     South Dakota State University\\ [.9ex]
     \number\year
